--- a/firstHtml.html
+++ b/firstHtml.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <main>
     <h1>The New York Times</h1>
     <p>
         <b>The New York Times</b> (por vezes abreviado para <b>NYT</b>) é um <span class="jornal">jornal</span> diário estadunidense, fundado e
@@ -15,7 +16,7 @@
     </p>
     <p>
         A versão impressa do <span class="jornal">jornal</span> tem a segunda maior circulação, atrás do The Wall Street Journal, e a maior
-        circulação entre os <span class="jornal">jornais</span> metropolitanos nos Estados Unidos. O New York Times está classificado em 39.º no
+        circulação entre os <span class="jornal">jornais </span> metropolitanos nos Estados Unidos. O New York Times está classificado em 39.º no
         mundo por circulação. No entanto, seguindo tendências da indústria como um todo, a sua circulação semanal caiu
         para menos de um milhão por dia desde 1990.
     </p>
@@ -64,8 +65,9 @@
 
     <h3>Fundação</h3>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur minus ducimus corporis reiciendis cumque quasi
-    quod harum, aliquam, quibusdam modi laboriosam tempore vero velit qui voluptatem voluptas voluptatum inventore
+    quod harum, aliquam<sup>[3]</sup>, quibusdam modi laboriosam tempore vero velit qui voluptatem voluptas voluptatum inventore
     totam.
+    <hr>
     Amet natus quisquam suscipit quod porro, saepe illum ut non ipsa ad ex quae numquam in accusamus. Molestias
     repudiandae omnis, harum cumque nostrum qui itaque dolor saepe nulla a ab?
     Obcaecati laborum doloremque commodi nulla ad assumenda dolore delectus harum recusandae. Saepe molestias iure
@@ -74,6 +76,7 @@
     <h2>Números</h2>
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, minima. Delectus omnis natus aperiam cumque officia
     debitis aspernatur, quisquam amet itaque. Nesciunt minus libero eius laboriosam vel itaque. Quaerat, blanditiis!
+    </main>
 </body>
 
 </html>
