--- a/CSS_Files/selectors.html
+++ b/CSS_Files/selectors.html
@@ -21,13 +21,17 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="tag">Blanditiis</span> corporis veniam accusamus, ducimus <span>laborum</span> voluptatum temporibus repellendus a, ad explicabo debitis voluptates nisi placeat delectus culpa ratione commodi rerum molestiae!
         Vero, ipsum laborum. <span class="tag">Officia</span> perferendis repellendus fugit pariatur beatae obcaecati unde ipsam velit architecto, voluptatum est voluptatem odit! Excepturi recusandae iusto officiis nesciunt vitae eum nam cupiditate fuga autem temporibus?
-        Modi alias aut neque porro ex odit dolores eaque sed suscipit distinctio corporis quos maiores, fugit, dolorem officiis commodi illo eveniet iusto repudiandae, tempora sint eius necessitatibus laudantium esse? Ullam!
+        Modi alias aut <a href="123">neque</a>  porro ex odit dolores eaque sed suscipit distinctio corporis quos maiores, fugit, dolorem officiis commodi illo eveniet iusto repudiandae, tempora sint eius necessitatibus laudantium esse? Ullam!
         Officiis animi quo <span class="tag">voluptatibus</span>, facere dolor iusto veniam laboriosam tempora esse non rerum voluptates unde? Nobis, repellat distinctio! Necessitatibus, sequi nam velit repellat similique numquam laudantium deleniti non officia debitis!
     </p>
     <section class="tercParte">
         <h2>Terceira parte</h2>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde <span><a href="https://www.google.com/search?q=repellendus">repellendus</a></span> explicabo molestiae ut, ducimus quos suscipit illum deserunt laborum aliquid in veritatis laudantium eaque! Commodi quos nemo deleniti deserunt possimus!
-        Vel quaerat mollitia eum provident! Eaque aut tenetur obcaecati quam, voluptatum hic facere asperiores sed illum cupiditate nihil rerum laborum non facilis alias quos voluptatem neque commodi vel deserunt minima!
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde <span><a href="https://www.google.com/search?q=repellendus">repellendus</a></span> explicabo molestiae ut, ducimus quos suscipit illum deserunt laborum aliquid in veritatis laudantium eaque! Commodi quos nemo deleniti deserunt possimus!
+            Vel quaerat mollitia eum provident! Eaque aut tenetur obcaecati quam, voluptatum hic facere asperiores sed illum cupiditate nihil rerum laborum non facilis alias quos voluptatem neque commodi vel deserunt minima!    
+        </p>
+        <label for="pass">Digite sua senha</label>
+        <input type="password" placeholder="Senha" id="pass">
     </section>
     </body>
 </html>
