--- a/BootStrap/08_Bootstrap/Basics/index.html
+++ b/BootStrap/08_Bootstrap/Basics/index.html
@@ -52,6 +52,7 @@
                 error nostrum similique sunt, quod deserunt totam pariatur consequatur ad exercitationem et ea odio?</p>
             <footer class="blockquote-footer">Mr. Lorem Ipsum</footer>
         </blockquote>
+        <button type="button" class ="btn btn-info">Info</button>
 
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -63,6 +64,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
+
+        
 </body>
 
 </html>
