--- a/BootStrap/08_Bootstrap/Basics/index.html
+++ b/BootStrap/08_Bootstrap/Basics/index.html
@@ -38,14 +38,26 @@
             </button>
         </div>
         <h2 class="display-4">Typography</h2>
-        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eaque, in autem cupiditate quasi
-            neque hic
-            minus
-            harum perferendis repellendus eos suscipit? Sunt laborum deserunt ea autem totam illum modi!Nobis expedita,
-            inventore provident reiciendis nostrum impedit, sunt magnam, labore ipsum sequi incidunt! Corrupti esse
-            harum
-            nesciunt soluta placeat, voluptates illo accusantium quam fuga ducimus quaerat minus laudantium, quo odit!
-        </p>
+        <div class="row">
+            <div class="col-md-6">
+                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eaque, in autem cupiditate quasi
+                    neque hic
+                    minus
+                    harum perferendis repellendus eos suscipit? Sunt laborum deserunt ea autem totam illum modi!Nobis expedita,
+                    inventore provident reiciendis nostrum impedit, sunt magnam, labore ipsum sequi incidunt! Corrupti esse
+                    harum
+                    nesciunt soluta placeat, voluptates illo accusantium quam fuga ducimus quaerat minus laudantium, quo odit!
+                </p>
+            </div>
+            <div class="col-md-6">
+                <p class = "lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid nesciunt in exercitationem hic! Quos vel non eum similique modi ipsam id quas, incidunt fugit rem corporis, facere dignissimos perspiciatis nostrum!
+                Corrupti possimus corporis itaque omnis est, earum, eius culpa, perferendis saepe officiis laboriosam aperiam neque dolorum repellendus! Explicabo nesciunt non libero ea cum, ut eaque minus iste rem pariatur corrupti?    
+                </p>    
+            </div>
+        </div>
+        
+        
         <blockquote class="blockquote text-right">
             <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est ab sed iusto alias numquam
                 ipsum tenetur
